manifest/cilium-gateway.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: cilium-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: cilium-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      kinds:
        - kind: HTTPRoute
      namespaces:
        from: All
  - protocol: HTTPS
    port: 443
    name: https
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard-production
        namespace: cilium-secrets
    allowedRoutes:
      namespaces:
        from: All
  # cilium does not honor addresses yet
  # https://github.com/cilium/cilium/issues/30123
  # addresses:
  #   - type: IPAddress
  #     value: "192.168.1.50"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpsredirect-internalgw
  namespace: cilium-gateway
spec:
  parentRefs:
    - name: internal
      namespace: cilium-gateway
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
